--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js"
-
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "express": "^5.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0"
